--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,8 @@
 <strong>I'm feeling:</strong>
 <br>
 <% @all_categories.each do|category| %>
-<%= category.name %> <br>
+
+<%= link_to category.name, verse_path(Verse.first) %>
+<br>
 <% end %>
+
