Added Add a verse functionality and more verses

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<small>"For the word of God is living and active and sharper than any two-edged sword..."</small>
+<h6><small class="lead">"For the word of God is living and active and sharper than any two-edged sword..."</small></h6>
 <h4>I am fighting:</h4>
 <div class="btn-group-vertical">
 <% @all_categories.each do|category| %>
