Added verse validation, cleaned up UI

--- a/app/views/verses/new.html.erb
+++ b/app/views/verses/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="well input-group">
 <%= form_for @verse do |f| %>
-  <%= f.label "Verse Reference:" %><br>
+  <%= f.label "Verse Reference (example: John 3:16)" %><br>
   <%= f.text_field :reference%> <br>
   <%= f.label "Category:" %> <br>
  
