--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <h6><small class="lead">"For the word of God is living and active and sharper than any two-edged sword..."</small></h6>
-<h4>I am fighting:</h4>
+<h4>I am fighting...</h4>
 <div class="btn-group-vertical">
 <% @all_categories.each do|category| %>
 
@@ -12,15 +12,5 @@
 </button>
 <% end %>
 
-<!-- category.verses.sample -->
-
 <% end %>
 </div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
