--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,6 +28,10 @@
 // Example:
 // @link-color: #ff0000;
 
-.btn-test{
-  width: 500px !important;
+.test_class{
+  width: 100%;
+  height: 100px;
+}
+
+.btn btn-default{
 }
